--- a/Permissions.yml
+++ b/Permissions.yml
@@ -1,1 +1,657 @@
-
+groups:
+  default:
+    options:
+      rank: '3'
+      rank-ladder: Player
+      default: true
+      prefix: '&6[&cNoob&6]'
+  Player:
+    permissions:
+    - essentials.kits.pilot
+    - essentials.kits.Tools
+    - essentials.kit.Tools
+    - essentials.kit.pilot
+    - essentials.kits
+    - essentials.me
+    - essentials.msg
+    - essentials.tpdeny
+    - essentials.tpaccept
+    - essentials.tpa
+    - multiverse.access.Survival_the_end
+    - essentials.rules
+    - multiverse.access.Missile_Wars
+    - movecraft.commands
+    - essentials.warps.Shop
+    - essentials.warps.TylerShop
+    - essentials.pay
+    - ChestShop.shop.*
+    - essentials.warps.creative
+    - multiverse.access.Creative
+    - essentials.suicide
+    - movecraft.Airship.*
+    - movecraft.Airskiff.*
+    - movecraft.citygate.*
+    - movecraft.elevator.*
+    - movecraft.HomeElevator.*
+    - movecraft.LaunchASM.*
+    - movecraft.LaunchSAM.*
+    - movecraft.LaunchTorpedo.*
+    - movecraft.portcullis.*
+    - movecraft.ship.*
+    - movecraft.BigSubAirship.*
+    - movecraft.BigAirship.*
+    - movecraft.SubAirship.*
+    - movecraft.SubAirskiff.*
+    - movecraft.Turret.*
+    - movecraft.WM.*
+    - movecraft.WMD.*
+    - essentials.warps.S-haven
+    - essentials.warps.Fillanel
+    - essentials.warps.Trindon
+    - multiverse.access.Test
+    - chestcommands.open.mini.yml
+    - essentials.warps.deathmatch
+    - essentials.delhome
+    - chestcommands.open.move.yml
+    - essentials.warps.Verace
+    - essentials.warps.renora
+    - essentials.warps.Fogholt
+    - essentials.warps.Emerald-Bay
+    - multiverse.access.world
+    - silkspawners.info
+    - silkspawners.place.*
+    - essentials.help
+    - multiverse.access.Survival_nether
+    - essentials.home
+    - essentials.sethome.multiple.unlimited
+    - essentials.sethome
+    - multiverse.access.Survival
+    - essentials.warps.Survival
+    - lockette.user.create.*
+    - essentials.warps.Players
+    - essentials.warps.Permissions
+    - essentials.warps.apply
+    - chestcommands.open.warps.yml
+    - essentials.back
+    - essentials.warps.jail
+    - libsdisguises.undisguise
+    - libsdisguises.disguise.*
+    - essentials.warps.forums
+    - essentials.warps.S_Haven
+    - essentials.kit.m
+    - essentials.kit
+    - chestcommands.item.main-menu.yml
+    - chestcommands.open.main-menu.yml
+    - essentials.warps.WarZone
+    - essentials.info
+    - essentials.warps.MoveCraft
+    - multiverse.access.MoveCraft
+    - multiverse.access.Mini Games
+    - multiverse.access.skyworld
+    - multiverse.access.Hub
+    - essentials.list
+    - essentials.warps.debug
+    - essentials.warps.bans
+    - essentials.warp
+    - essentials.warp.list
+    - essentials.balance.others
+    - essentials.balance
+    - bukkit.command.plugins
+    - essentials.signs.enchant.allowunsafe
+    - essentials.signs.use.enchant
+    - essentials.signs.use.balance
+    - essentials.signs.use.sell
+    - essentials.signs.use.buy
+    - essentials.signs.use.free
+    - essentials.helpop
+    - essentials.mail
+    - essentials.mail.send
+    - essentials.msg.*
+    - essentials.ban.notify
+    - essentials.hat
+    - essentials.ignore
+    - essentials.afk.auto
+    - essentials.warps.Mini-Games
+    - echopet.pet.*
+    - echopet.pet
+    - essentials.warps.Parkour
+    - protectionstones.members
+    - protectionstones.destroy
+    - protectionstones.create
+    - essentials.tpahere
+    - essentials.spawn
+    - essentials.afk
+    options:
+      rank: '2'
+      rank-ladder: Player
+      prefix: '&6[&cMember&6] '
+  Super-Player:
+    permissions:
+    - upack.list
+    - upack.help
+    - upack.off
+    - upack.menu
+    - upack.angry
+    - upack.villager
+    - upack.witch
+    - upack.void
+    - upack.splash
+    - upack.spell
+    - upack.spark
+    - upack.snowball
+    - upack.smoke
+    - upack.slime
+    - upack.portal
+    - upack.music
+    - upack.magic
+    - upack.heart
+    - upack.instspell
+    - upack.firework
+    - upack.ender
+    - upack.color
+    - upack.cloud
+    - essentials.recipe
+    - silkspawners.changetype.creeper
+    - silkspawners.changetype.skeleton
+    - silkspawners.changetype.spider
+    - silkspawners.changetype.giant
+    - silkspawners.changetype.zombie
+    - silkspawners.changetype.slime
+    - silkspawners.changetype.ghast
+    - silkspawners.changetype.zombiepigman
+    - silkspawners.changetype.enderman
+    - silkspawners.changetype.cavespider
+    - silkspawners.changetype.silverfish
+    - silkspawners.changetype.blaze
+    - silkspawners.changetype.magmacube
+    - silkspawners.changetype.endermite
+    - silkspawners.changetype.guardian
+    - silkspawners.changetype.witch
+    - silkspawners.changetype.bat
+    - silkspawners.changetype.pig
+    - silkspawners.changetype.sheep
+    - silkspawners.changetype.cow
+    - silkspawners.changetype.chicken
+    - silkspawners.changetype.squid
+    - silkspawners.changetype.wolf
+    - silkspawners.changetype.mooshroom
+    - silkspawners.changetype.snowgolem
+    - silkspawners.changetype.ocelot
+    - silkspawners.changetype.irongolem
+    - silkspawners.changetype.villager
+    - silkspawners.changetype.horse
+    - silkspawners.changetype.rabbit
+    - silkspawners.silkdrop.*
+    - essentials.fly.safelogin
+    - essentials.fly
+    - essentials.whois
+    - essentials.spawner.*
+    - essentials.spawner
+    - essentials.god
+    - essentials.heal
+    options:
+      rank: '2'
+      rank-ladder: Fun
+  Mod:
+    permissions:
+    - factions.*
+    - chatcolor.*
+    - cc.*
+    - clearchat.*
+    - essentials.gamemode
+    - upack.fire
+    - worldedit.inventory.unrestricted
+    - essentials.signs.format
+    - essentials.signs.color
+    - -worldedit.inventory.unrestricted
+    - mcmmo.perks.xp.double.all
+    - mcmmo.perks.cooldowns.halved
+    - mcmmo.perks.activationtime.fourseconds
+    - essentials.powertool
+    - essentials.joinfullserver
+    - -worldedit.butcher
+    - worldedit.*
+    - essentials.chat.color
+    - essentials.chat.format
+    - essentials.chat.magic
+    - essentials.heal.cooldown.bypass
+    - essentials.feed.cooldown.bypass
+    - essentials.kick
+    - essentials.tphere
+    - essentials.time.set
+    - essentials.time
+    - citizens.npc.*
+    - sentry.*
+    - citizens.npc.edit.equip
+    - citizens.npc.select
+    - sentry.guard
+    - vanish.silentchests
+    - vanish.nohunger
+    - vanish.nochat
+    - vanish.nointeract
+    - vanish.trample
+    - vanish.nofollow
+    - vanish.nopickup
+    - vanish.toggle.all
+    - vanish.preventdamage
+    - vanish.vanish
+    - vanish.hooks.essentials.hide
+    - essentials.enderchest
+    - essentials.enderchest.others
+    - lagg.clear
+    - chestcommands.item.mod-console.yml
+    - chestcommands.open.mod-console.yml
+    - menu.mod
+    - essentials.invsee
+    - essentials.broadcast
+    - essentials.itemdb
+    - essentials.tptoggle
+    - essentials.tp.others
+    - essentials.tp
+    - bukkit.command.save.perform
+    - essentials.skull
+    - ServerSpy.*
+    - essentials.socialspy
+    - essentials.helpop.receive
+    - essentials.skull.*
+    - essentials.togglejail
+    - essentials.setjail
+    - essentials.jails
+    - essentials.deljail
+    - essentials.sleepingignored
+    - essentials.chat.ignoreexempt
+    - worldedit.navigation.thru.tool
+    - worldedit.navigation.jumpto.tool
+    - worldguard.locate
+    - coreprotect.inspect
+    - essentials.weather
+    - coreprotect.lookup
+    options:
+      rank: '4'
+      rank-ladder: Staff
+      prefix: '&6[&4&kH&cMod&4&kH&6] '
+    inheritance:
+    - Player
+  Ultra-Player:
+    permissions:
+    - upack.enchant
+    - essentials.ext
+    - essentials.powertooltoggle
+    - essentials.powertool
+    options:
+      rank: '1'
+      rank-ladder: Fun
+  Admin:
+    options:
+      rank: '2'
+      rank-ladder: Staff
+      prefix: '&6[&4&kH&cAdmin&4&kH&6] '
+    permissions:
+    - mcbans.ban
+    - mcbans.kick
+    - upack.explosion
+    - mcmmo.perks.xp.quadruple.all
+    - mcmmo.perks.cooldowns.quartered
+    - mcmmo.perks.activationtime.eightseconds
+    - playervaults.admin
+    - essentials.spawnmob.*
+    - essentials.spawnmob
+    - essentials.nick
+    - vanish.list
+    - essentials.clearinventory
+    - essentials.tpohere
+    - essentials.tpo
+    - chestcommands.item.admin-console.yml
+    - chestcommands.open.admin-console.yml
+    - menu.Admin
+    - worldguard.region.bypass.*
+    - movecraft.
+    - worldedit.*
+    - essentials.list.hidden
+    - essentials.sudo
+    - essentials.enderchest.modify
+    - essentials.burn
+    - essentials.book.*
+    - essentials.book
+    - essentials.workbench
+    - essentials.speed.walk
+    - essentials.speed.fly
+    - essentials.speed
+    - essentials.repair.*
+    - essentials.repair
+    - essentials.item
+    - essentials.heal.others
+    - essentials.heal
+    - essentials.give
+    - essentials.gamemode
+    - essentials.firework.fire
+    - essentials.firework
+    - essentials.feed
+    - essentials.exp.*
+    - essentials.exp
+    - essentials.enchantments.*
+    - essentials.enchant
+    - lockette.admin.snoop
+    - lockette.admin.bypass
+    inheritance:
+    - Player
+  FlyPlayer:
+    options:
+      rank: '1'
+      rank-ladder: Player
+    permissions:
+    - essentials.fly
+  HeadMod:
+    options:
+      rank: '3'
+      rank-ladder: Staff
+    permissions:
+    - essentials.tempban.offline
+    - upack.waterdrip
+    - essentials.tempban
+  Owner:
+    permissions:
+    - multiverse.bypass.gamemode.*
+    - -essentials.protect.damage.*
+    - vanish.toggle.all
+    - vanish.hooks.essentials.hide
+    - vanish.standard
+    - -vanish.*
+    - '*'
+    options:
+      prefix: '&6[&4&kH&c&lOwner&4&kH&6] '
+  Builder:
+    permissions:
+    - chatcolor.*
+    - factions.override
+    - factions.admin
+    - essentials.tp
+    - essentials.fly
+    - essentials.gamemode
+    - essentials.back
+    - worldedit.*
+    inheritance:
+    - Player
+    options:
+      prefix: '&6[&cBuilder&6] '
+  Dev:
+    inheritance:
+    - Owner
+  Tester:
+    inheritance:
+    - Builder
+  HeadAdmin:
+    permissions:
+    - upack.lavadrip
+    - -pwnfilter.bypass.chat
+    - -pwnfilter.bypass.*
+    - -playervaults.*
+    - -essentials.protect.*
+    - -essentials.protect
+    - -mcmmo.perks.*
+    options:
+      prefix: '&6[&4&kH&c&lHeadAdmin&4&kH&6] '
+    inheritance:
+    - Admin
+  Bday:
+    permissions:
+    - essentials.nuke
+    - essentials.lightning.*
+    - essentials.lightning
+    - essentials.powertool
+    - essentials.nick
+    - essentials.list
+    - essentials.workbench
+    - essentials.time.set
+    - essentials.time
+    - essentials.speed
+    - essentials.god
+    - essentials.feed
+    - essentials.gc
+    - essentials.tphere
+    - essentials.tp
+    - movecraft.*
+  Plauer:
+    permissions:
+    - multiverse.access.Survival_the_end
+  Member:
+    permissions:
+    - essentials.msg
+users:
+  mr52236:
+    group:
+    - Player
+  snazo25:
+    group:
+    - Player
+  flyingmuffin32:
+    group:
+    - Player
+  d369cafb-1ed9-4b33-98a8-bcc61257657d:
+    group:
+    - Owner
+    - HeadAdmin
+    - Admin
+    - Ultra-Player
+    - HeadMod
+    - Mod
+    - Super-Player
+    - Player
+    options:
+      name: TylerS1066
+  cd0562f5-b483-489f-9a9f-242635efe9bc:
+    group:
+    - HeadMod
+    - Mod
+    - Super-Player
+    - Player
+    options:
+      name: Precious26
+  f7621412-2da4-4f83-ac5e-11bbaadc2aef:
+    group:
+    - Mod
+    - Super-Player
+    - Player
+    options:
+      name: ChilledFish
+  e81d3bef-5311-4130-ac28-770adf26e397:
+    group:
+    - B-day
+    - Admin
+    - HeadMod
+    - Mod
+    - Super-Player
+    - Player
+    options:
+      name: nukedd
+  c86e85ae-214d-4bca-8d98-93154361c93b:
+    group:
+    - Admin
+    - HeadMod
+    - Mod
+    - Super-Player
+    - Player
+    options:
+      name: Error_name
+  b5c8f0ef-590e-42a3-9f1f-437096f1e11a:
+    group:
+    - Super-Player
+    - FlyPlayer
+    - Player
+    options:
+      name: RoboElement
+  dd58a31a-67e6-48ac-9817-21c1eb108dd6:
+    group:
+    - Player
+    options:
+      name: bluemonkey981
+  508e2bc0-8c5a-488d-b1ff-4679f13adb65:
+    group:
+    - Player
+    options:
+      name: RoboticFox
+  bdbc042b-2db9-4b0f-9cb1-ae9ea0430c7e:
+    group:
+    - FlyPlayer
+    - Player
+    options:
+      name: Chaoscam
+  5adec0b6-cf19-4b91-b876-b9bd08bec9c1:
+    group:
+    - Super-Player
+    - Player
+    options:
+      name: RomanWar17
+  39e98858-f026-4380-a20a-6d1481f16b3f:
+    group:
+    - Mod
+    - Super-Player
+    - Player
+    options:
+      name: RobotTEM
+  2977881f-5a6a-441f-8970-37ec41311258:
+    group:
+    - FlyPlayer
+    - Player
+    options:
+      name: Gillanator
+  plotplayer:
+    group:
+    - Player
+  bob22687:
+    group:
+    - Player
+  flamespinner:
+    group:
+    - Player
+  audrey718:
+    group:
+    - Player
+  bartsky:
+    group:
+    - Player
+  091e0bc1-1c64-4b7c-928e-c2ca72a29b88:
+    options:
+      name: Bartsky
+    group:
+    - FlyPlayer
+    - Player
+  32bfd7b0-2742-4a54-82c5-95e5d2a59714:
+    group:
+    - Player
+    options:
+      name: wUnDeR_AOT
+  jtso:
+    group:
+    - Player
+  c575c4e1-4ce3-476a-8456-4f833d1967cd:
+    group:
+    - Player
+    options:
+      name: Firesword7734
+  fsxmaster2322:
+    group:
+    - Player
+  ae885d0d-1d0c-47c0-bcb0-9e50d081e638:
+    group:
+    - Fly-Player
+    - Player
+    options:
+      name: PuerProdigium
+  17fc3613-16e7-43ae-beed-92a7a9365f79:
+    group:
+    - Player
+    options:
+      name: Leoigface
+  teeds427:
+    group:
+    - Player
+  bf9cfe31-b3e7-4470-a94d-24fb99ee3fc2:
+    options:
+      name: teeds427
+    group:
+    - FlyPlayer
+    - Player
+  f36e8afb-f77e-4bf5-9dfd-ef2ea08dc773:
+    group:
+    - Player
+    options:
+      name: videominion3
+  4106c722-cdaf-4d72-bf50-771cb8048031:
+    group:
+    - Owner
+    permissions: []
+    options:
+      name: keough99
+  0aef7235-5995-48d4-873b-2b1dc9b7fbe3:
+    permissions:
+    - factions.override
+    group:
+    - Builder
+    options:
+      name: Capal_Victorous
+  bd1eb3cd-795a-4658-a264-12986860989a:
+    permissions:
+    - essentials.back
+    - essentials.pay
+    group:
+    - Builder
+    options:
+      name: LordLego12
+  regan:
+    group:
+    - Owner
+  21db0ac8-3541-464b-a490-70562d5935cc:
+    group:
+    - Owner
+    options:
+      name: artemasfowl
+  fe3dd6da-681e-4ab1-99af-cf62ddb300fb:
+    group:
+    - Mod
+    options:
+      name: JLW1808
+  f667ff0e-7d00-4e90-b4f2-2fdf228f98c6:
+    group:
+    - Owner
+    options:
+      name: 11Doctor
+  384e3ecf-f98c-4e7d-83be-77879089fb1d:
+    group:
+    - Player
+    options:
+      name: Dragon579
+  0b385fbf-7b7d-42e5-b0c3-4a41a39a5d32:
+    group:
+    - Player
+    options:
+      name: nat10012
+  556ce962-8b33-49a6-aaea-d706586d730e:
+    group:
+    - Player
+    options:
+      name: SwagBusterFTW
+    permissions:
+    - essentials.tp
+    - worldedit.*
+  3f7b5303-e125-423e-8c35-b8858ec973bb:
+    group:
+    - HeadAdmin
+    options:
+      name: MonkeybuttFTW
+  8dcd393b-20fc-49fe-b072-ba589d2a3f2e:
+    group:
+    - Mod
+    options:
+      name: Edd2020
+  06a1efa5-a54d-4c52-9e02-8210a6ec5501:
+    group:
+    - Player
+    options:
+      name: beyblade_2012
+  50be6a1e-e25d-409f-af0a-158bad4be28b:
+    group:
+    - Player
+    options:
+      name: Electron527
+schema-version: 1
