--- a/Permissions.yml
+++ b/Permissions.yml
@@ -97,8 +97,6 @@ groups:
     - chestcommands.open.warps.yml
     - essentials.back
     - essentials.warps.jail
-    - libsdisguises.undisguise
-    - libsdisguises.disguise.*
     - essentials.warps.forums
     - essentials.warps.S_Haven
     - essentials.kit.m
@@ -119,7 +117,6 @@ groups:
     - essentials.warp.list
     - essentials.balance.others
     - essentials.balance
-    - bukkit.command.plugins
     - essentials.signs.enchant.allowunsafe
     - essentials.signs.use.enchant
     - essentials.signs.use.balance
@@ -146,6 +143,7 @@ groups:
     - essentials.tpahere
     - essentials.spawn
     - essentials.afk
+    - cannons.player.*
     options:
       rank: '2'
       rank-ladder: Player
